--- a/resume-cv/arnav-kumar.tex
+++ b/resume-cv/arnav-kumar.tex
@@ -43,7 +43,7 @@
 \titleformat{\subsection}{\color{MyBlue1}\bfseries\large}{}{0em}{}
 \titleformat{\subsubsection}[runin]{\bfseries}{}{0em}{}[:]
 
-\titlespacing{\section}{0em}{0.2em}{0.3em}
+\titlespacing{\section}{0em}{0.4em}{0.3em}
 \titlespacing{\subsection}{0em}{0em}{0.25em}
 \titlespacing{\subsubsection}{0em}{0em}{0.25em}
 
@@ -71,7 +71,7 @@
 
 \newenvironment{resumeItem}
 {
-    \vspace{0.25em}
+    \vspace{0.45em}
 }
 {
 }
@@ -89,7 +89,7 @@
 }
 
 \newcommand{\experienceHead}[4]{
-    \textbf{#1} @ #2 \hfill #3 \\ \textit{#4} \\[-1.2em]
+    \textbf{#1} @ #2 \hfill \textit{#4} \, \textbar \> #3 \\[-1.2em]
 }
 
 \newenvironment{resumeList}
