--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -1,7 +1,7 @@
 \section{Experience}
 
 \begin{resumeItem}
-\experienceHead{Software Engineer (Graphics, 3D Geometry)}{Arcol.io}{Sep 2025 - Dec 2025}{San Francisco, USA}
+\experienceHead{Graphics \& 3D Geometry Software Engineer}{Arcol.io}{Sep 2025 - Dec 2025}{San Francisco, USA}
 \begin{resumeList}
     \item Designed and implemented a Rust terrain triangle mesh generation algorithm based on Delaunay triangulation and interpolation between terrain contours.
     \item Performed prototyping, iteration, and proof-of-concepts to choose and implement the most suitable approach.
@@ -33,7 +33,7 @@
 \end{resumeItem}
 
 \begin{resumeItem}
-\experienceHead{Blockchain Software Engineer}{Dandelion Networks}{May 2023 - Aug 2023}{Online}
+\experienceHead{Blockchain Software Engineer}{Dandelion Networks}{May 2023 - Aug 2023}{Remote}
 \begin{resumeList}
     \item Developed and implemented an enhanced lattice syncing and node discovery algorithm in Go, querying peers with Protocol Buffers to identify and address missing blocks in the local lattice with secure and concurrent updates.
 \ifthenelse{ \equal{\version}{cv} }{
