--- a/resume-cv/skills.tex
+++ b/resume-cv/skills.tex
@@ -1,6 +1,7 @@
 \section{Skills}
 
 \begin{resumeItem}
+
 \ifthenelse{ \equal{\version}{cv} }{
 \subsubsection{Linguistics}
 English, Hindi, Spanish, Russian, Romanian (read, write, speak), and Japanese (only spoken)
@@ -8,10 +9,12 @@ English, Hindi, Spanish, Russian, Romanian (read, write, speak), and Japanese (o
 
 \subsubsection{Programming}
 \ifthenelse{ \equal{\focus}{graphics} }{
-    C, C++, Rust, TypeScript, GLSL, Go, Python, Haskell, Bash
+    C++, C, Python, Rust, TypeScript, GLSL, Go, Haskell, Bash
 }{
     Python, C++, Rust, Go, JavaScript, TypeScript, Haskell, Java, Bash, {\LaTeX}\ifthenelse{ \equal{\version}{cv} }{, HTML, CSS, Markdown, RegEx}{}
 }{}
+
+\vspace{0.1em}
 
 \subsubsection{Tools}
 \ifthenelse{ \equal{\focus}{graphics} }{
@@ -19,5 +22,6 @@ English, Hindi, Spanish, Russian, Romanian (read, write, speak), and Japanese (o
 }{
     WebGL, Three.js, Pandas, Matplotlib, NumPy, Pytorch, Scikit-learn, OpenCV, Unix, Godot, Protobuf
 }{}
+
 \end{resumeItem}
 
