--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -3,7 +3,7 @@
 \begin{resumeItem}
 \experienceHead{Graphics \& 3D Geometry Software Engineer}{Arcol.io}{Sep 2025 - Dec 2025}{San Francisco, USA}
 \begin{resumeList}
-    \item Designed and implemented a Rust terrain triangle mesh generation algorithm based on Delaunay triangulation and interpolation between terrain contours.
+    \item Designed and implemented a Rust algorithm to reconstruct terrain meshes from raw, unstructured contour data spanning areas over 5km\textsuperscript{2}.
     \item Performed prototyping, iteration, and proof-of-concepts to choose and implement the most suitable approach.
     \item Rendered generated terrain and contour lines, sent over the Wasm ABI to TypeScript, with Three.js and WebGL.
 \end{resumeList}
@@ -56,30 +56,31 @@
 \begin{resumeItem}
 \experienceHead{Math Competition Teacher}{Webber Academy}{Aug 2021 - June 2022}{Calgary, AB.}
 \begin{resumeList}
-    \item Taught 4 children competition mathematics every week for 90 minutes after school.
-    \item Covered topics including tricks in algebra, number theory, inequalitites, and some basic combinatorics.
+    \item Taught 4 children every week for 90 minutes after school, covering various math competition tricks.
+    % \item Covered topics including tricks in algebra, number theory, inequalitites, and some basic combinatorics.
 \end{resumeList}
 \end{resumeItem}
 
-\begin{resumeItem}
-\experienceHead{Coding Instructor}{Code Ninjas West Springs}{Mar 2022 - Apr 2022}{Calgary, AB.}
-\begin{resumeList}
-    \item Taught over 45 students to complete programming challenges in Scratch, MakeCode, and JavaScript.
-    \item Managed the progress of the students and directly relayed feedback to the manager.
-\end{resumeList}
-\end{resumeItem}
+% \begin{resumeItem}
+% \experienceHead{Coding Instructor}{Code Ninjas West Springs}{Mar 2022 - Apr 2022}{Calgary, AB.}
+% \begin{resumeList}
+%     \item Taught over 45 students to complete programming challenges in Scratch, MakeCode, and JavaScript.
+%     \item Managed the progress of the students and directly relayed feedback to the manager.
+% \end{resumeList}
+% \end{resumeItem}
 
 \begin{resumeItem}
 \experienceHead{Student Council President}{Webber Academy}{Sep 2021 - Jun 2022}{Calgary, AB.}
 \begin{resumeList}
-    \item Organized numerous successful school events such as trivia nights, dances, and tournaments.
-    \item Lead monthly school assemblies, and weekly general student council and student council exercutive meetings.
-    \item Reported all of the student councils activities and event proposals to the prinicpal weekly.
+    % \item Organized numerous successful school events such as trivia nights, dances, and tournaments.
+    % \item Lead monthly school assemblies, and weekly general student council and student council executive meetings.
+    \item Organized numerous events and lead monthly school assemblies, and weekly council meetings.
+    % \item Reported all of the student councils activities and event proposals to the prinicpal weekly.
 \end{resumeList}
 \end{resumeItem}
 
 \begin{resumeItem}
-\experienceHead{Machine Learning Research Intern}{University of Alberta}{Jul 2021 - Aug 2021}{Online}
+\experienceHead{Machine Learning Research Intern}{University of Alberta}{Jul 2021 - Aug 2021}{Remote}
 \begin{resumeList}
     \item Trained and employed Natural Language Processing (NLP) models to help determine the cause of a change in depressive language in Tweets as part of a psychology study.
 \ifthenelse{ \equal{\version}{cv} }{
