--- a/resume-cv/projects.tex
+++ b/resume-cv/projects.tex
@@ -123,17 +123,17 @@
 % \end{resumeList}
 % \end{resumeItem}
 
-\ifthenelse{ \equal{\version}{cv} }{
-\ifthenelse{ \equal{\focus}{general} }{
-\begin{resumeItem}
-\projectHead{\href{https://github.com/arnavcs/black-jack}{Blackjack}}{C++}{Apr 2021 - Jul 2021}
-\begin{resumeList}
-    \item Used object oriented programming to implement a local multiplayer blackjack game with a computer playing as the house.
-    \item Probabilistically optimized the holding value that the computer house uses.
-\end{resumeList}
-\end{resumeItem}
-}{}
-}{}
+% \ifthenelse{ \equal{\version}{cv} }{
+% \ifthenelse{ \equal{\focus}{general} }{
+% \begin{resumeItem}
+% \projectHead{\href{https://github.com/arnavcs/black-jack}{Blackjack}}{C++}{Apr 2021 - Jul 2021}
+% \begin{resumeList}
+%     \item Used object oriented programming to implement a local multiplayer blackjack game with a computer playing as the house.
+%     \item Probabilistically optimized the holding value that the computer house uses.
+% \end{resumeList}
+% \end{resumeItem}
+% }{}
+% }{}
 
 % \begin{resumeItem}
 % \projectHead{\href{https://github.com/arnavcs/game-of-life}{Conway's Game of Life}}{Javascript}{Apr 2020 - Mar 2020}
