--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -3,7 +3,7 @@
 \begin{resumeItem}
 \experienceHead{Graphics \& 3D Geometry Software Engineer}{Arcol.io}{Sep 2025 - Dec 2025}{San Francisco, USA}
 \begin{resumeList}
-    \item Designed and implemented a Rust algorithm to reconstruct terrain meshes from raw, unstructured contour data spanning areas over 5km\textsuperscript{2}.
+    \item Designed and implemented a Rust algorithm to reconstruct terrain meshes from raw contour data for areas over 5km\textsuperscript{2}.
     \item Performed prototyping, iteration, and proof-of-concepts to choose and implement the most suitable approach.
     \item Rendered generated terrain and contour lines, sent over the Wasm ABI to TypeScript, with Three.js and WebGL.
 \end{resumeList}
