--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -79,6 +79,9 @@
 \end{resumeList}
 \end{resumeItem}
 
+}{}
+
+\ifthenelse{ \equal{\focus}{general} }{
 \begin{resumeItem}
 \experienceHead{Machine Learning Research Intern}{University of Alberta}{Jul 2021 - Aug 2021}{Remote}
 \begin{resumeList}
