--- a/resume-cv/skills.tex
+++ b/resume-cv/skills.tex
@@ -20,7 +20,7 @@ English, Hindi, Spanish, Russian, Romanian (read, write, speak), and Japanese (o
 \ifthenelse{ \equal{\focus}{graphics} }{
     WebGL, Three.js, Godot, Unity, Unreal Engine, Matplotlib, Pytorch, Scikit-learn, OpenCV, Unix
 }{
-    WebGL, Three.js, Pandas, Matplotlib, NumPy, Pytorch, Scikit-learn, OpenCV, Unix, Godot, Protobuf
+    Pytorch, Pandas, Matplotlib, NumPy, Scikit-learn, OpenCV, Unix, WebGL, Three.js, Godot, Protobuf 
 }{}
 
 \end{resumeItem}
