switched latex resume building system

--- a/resume-cv/achievements.tex
+++ b/resume-cv/achievements.tex
@@ -2,28 +2,36 @@
 
 \begin{resumeItem}
 \begin{resumeList}
-    \ifthenelse{ \equal{\version}{cv} }{
-    \item \achievement{Technical Achievement award}{UW Game Dev Club Game Jam}{Fall 2024}
-    }{}
-
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{Technical Achievement award}{UW Game Dev Club Game Jam}{Fall 2024}
+    }
     \item \achievement{$335^{\mathrm{th}}$ (top $10\%$), with score $26$}{William Lowell Putnam Mathematical Competition}{2022}
     \item \achievement{$10^{\mathrm{th}}$ in Canada}{Asian Pacific Mathematics Olympiad (APMO)}{2022}
-
-    \ifthenelse{ \equal{\version}{cv} }{
-    \item \achievement{$11^{\mathrm{th}}$ in Canada}{Canadian Association of Physicists High School Exam}{2022}
-    \item \achievement{$12^{\mathrm{th}}$ in Canada, $17^{\mathrm{th}}$ internationally}{Sir Isaac Newton Physics Exam}{2021 - 2022}
-    }{}
-
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{$11^{\mathrm{th}}$ in Canada}{Canadian Association of Physicists High School Exam}{2022}
+    }
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{$12^{\mathrm{th}}$ in Canada, $17^{\mathrm{th}}$ internationally}{Sir Isaac Newton Physics Exam}{2021 - 2022}
+    }
     \item \achievement{$18^{\mathrm{th}}$ in Canada, 2 time qualifier}{Canadian Mathematical Olympiad (CMO)}{2021 - 2022}
-
-    \ifthenelse{ \equal{\version}{cv} }{
-    \item \achievement{Canadian Honour Roll, Top in Alberta}{Canadian Open Mathematics Challenge}{2017 - 2022} % Gold or Silver Alberta medalist every year
-    \item \achievement{2 time qualifier}{American Invitational Mathematics Exmaination}{2021 - 2022}
-    \item \achievement{Part II winner, 3 time part I winner}{Alberta High School Mathematics Competition}{2018 - 2022} % perfect score in part I, AHSMC fellow
-    \item \achievement{Invited to write}{United States of America Mathematical Olympiad (USAMO)}{2022}
-    \item \achievement{Bronze medalist for machine learning project on prognosing IPF}{Canada Wide Science Fair}{2021}
-    \item \achievement{Estuary Sponsor Prize Winner}{UofTHacks X}{2023}
-    }{}
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{Canadian Honour Roll, Top in Alberta}{Canadian Open Mathematics Challenge}{2017 - 2022} % Gold or Silver Alberta medalist every year
+    }
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{2 time qualifier}{American Invitational Mathematics Exmaination}{2021 - 2022}
+    }
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{Part II winner, 3 time part I winner}{Alberta High School Mathematics Competition}{2018 - 2022} % perfect score in part I, AHSMC fellow
+    }
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{Invited to write}{United States of America Mathematical Olympiad (USAMO)}{2022}
+    }
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{Bronze medalist for machine learning project on prognosing IPF}{Canada Wide Science Fair}{2021}
+    }
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item \achievement{Estuary Sponsor Prize Winner}{UofTHacks X}{2023}
+    }
 \end{resumeList}
 \end{resumeItem}
 
