--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -25,10 +25,10 @@
     \item Authored a paper (The dimension of sparse random graph orders) in pre-print in arXiv (\href{https://arxiv.org/abs/2504.19029}{https://arxiv.org/abs/2504.19029}).
     \item Worked on novel research exploring random graph orders and poset dimension utilizing configuration models, approximation techniques, convergence in probability, devising constructions, and computationally searching for counterexamples. 
     % \item Examined a conjecture about poset dimension, designing and running programs to search for counterexamples, and devising constructions to improve random graph order dimension bounds.
-\ifthenelse{ \equal{\version}{cv} }{
-    \item Developed two theorems about the nature of poset dimension for bipartite posets based on the dimension of induced subposets and for random graph orders.
-    \item Engaged in regular meetings to discuss and advance research, demonstrating capacity for effective collaboration.
-}{}
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item Developed two theorems about the nature of poset dimension for bipartite posets based on the dimension of induced subposets and for random graph orders.
+     \item Engaged in regular meetings to discuss and advance research, demonstrating capacity for effective collaboration.
+    }
 \end{resumeList}
 \end{resumeItem}
 
@@ -36,30 +36,33 @@
 \experienceHead{Blockchain Software Engineer}{Dandelion Networks}{May 2023 - Aug 2023}{Remote}
 \begin{resumeList}
     \item Developed and implemented an enhanced lattice syncing and node discovery algorithm in Go, querying peers with Protocol Buffers to identify and address missing blocks in the local lattice with secure and concurrent updates.
-\ifthenelse{ \equal{\version}{cv} }{
-    \item Created and deployed a locally hosted debugging website in Go to be run by each node of the blockchain network.
-    \item Designed multiple mock servers, clients, and services with Ginkgo and Gomega to test the algorithms.
-}{}
+    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+     \item Created and deployed a locally hosted debugging website in Go to be run by each node of the blockchain network.
+     \item Designed multiple mock servers, clients, and services with Ginkgo and Gomega to test the algorithms.
+    }
     \item Created Jenkins pipeline which automatically build, test, vet, and format pushed code to catch regressions.
 \end{resumeList}
 \end{resumeItem}
 
-\ifthenelse{ \equal{\version}{cv} }{
-\begin{resumeItem}
-\experienceHead{Data Science Intern}{Tektorch.ai}{Apr 2022 - Aug 2022}{Online}
-\begin{resumeList}
-    \item Extracted features such as job title, location, classification, and pay from a job listing website using Python, Beautiful Soup 4, NumPy, and Pandas to create a dataset for analysis. 
-    \item Developed an end-to-end data visualization pipeline to ingest data and display trends using Matplotlib and NumPy.
-\end{resumeList}
-\end{resumeItem}
+\ifboolexpr{ togl {graphics} or togl {general} }{}{
+ \begin{resumeItem}
+ \experienceHead{Data Science Intern}{Tektorch.ai}{Apr 2022 - Aug 2022}{Online}
+ \begin{resumeList}
+     \item Extracted features such as job title, location, classification, and pay from a job listing website using Python, Beautiful Soup 4, NumPy, and Pandas to create a dataset for analysis. 
+     \item Developed an end-to-end data visualization pipeline to ingest data and display trends using Matplotlib and NumPy.
+ \end{resumeList}
+ \end{resumeItem}
+}
 
-\begin{resumeItem}
-\experienceHead{Math Competition Teacher}{Webber Academy}{Aug 2021 - June 2022}{Calgary, AB.}
-\begin{resumeList}
-    \item Taught 4 children every week for 90 minutes after school, covering various math competition tricks.
-    % \item Covered topics including tricks in algebra, number theory, inequalitites, and some basic combinatorics.
-\end{resumeList}
-\end{resumeItem}
+\ifboolexpr{ togl {graphics} or togl {general} }{}{
+ \begin{resumeItem}
+ \experienceHead{Math Competition Teacher}{Webber Academy}{Aug 2021 - June 2022}{Calgary, AB.}
+ \begin{resumeList}
+     \item Taught 4 children every week for 90 minutes after school, covering various math competition tricks.
+     % \item Covered topics including tricks in algebra, number theory, inequalitites, and some basic combinatorics.
+ \end{resumeList}
+ \end{resumeItem}
+}
 
 % \begin{resumeItem}
 % \experienceHead{Coding Instructor}{Code Ninjas West Springs}{Mar 2022 - Apr 2022}{Calgary, AB.}
@@ -69,29 +72,29 @@
 % \end{resumeList}
 % \end{resumeItem}
 
-\begin{resumeItem}
-\experienceHead{Student Council President}{Webber Academy}{Sep 2021 - Jun 2022}{Calgary, AB.}
-\begin{resumeList}
-    % \item Organized numerous successful school events such as trivia nights, dances, and tournaments.
-    % \item Lead monthly school assemblies, and weekly general student council and student council executive meetings.
-    \item Organized numerous events and lead monthly school assemblies, and weekly council meetings.
-    % \item Reported all of the student councils activities and event proposals to the prinicpal weekly.
-\end{resumeList}
-\end{resumeItem}
-
-}{}
-
-\ifthenelse{ \equal{\focus}{general} }{
-\begin{resumeItem}
-\experienceHead{Machine Learning Research Intern}{University of Alberta}{Jul 2021 - Aug 2021}{Remote}
-\begin{resumeList}
-    \item Trained and employed Natural Language Processing (NLP) models to help determine the cause of a change in depressive language in Tweets as part of a psychology study.
-\ifthenelse{ \equal{\version}{cv} }{
-    \item Created an evaluation framework with graphs and videos to analyse subject mouse position data during exams.
-    \item Developed automation pipeline in Bash to reduce time spent by $20\times$ on the application of the evaluation framework.
-}{
-    \item Created an evaluation framework to analyze mouse position data and automated it in Bash to reduce time spent by $20\times$.
+\ifboolexpr{ togl {graphics} or togl {general} }{}{
+ \begin{resumeItem}
+ \experienceHead{Student Council President}{Webber Academy}{Sep 2021 - Jun 2022}{Calgary, AB.}
+ \begin{resumeList}
+     % \item Organized numerous successful school events such as trivia nights, dances, and tournaments.
+     % \item Lead monthly school assemblies, and weekly general student council and student council executive meetings.
+     \item Organized numerous events and lead monthly school assemblies, and weekly council meetings.
+     % \item Reported all of the student councils activities and event proposals to the prinicpal weekly.
+ \end{resumeList}
+ \end{resumeItem}
 }
-\end{resumeList}
-\end{resumeItem}
-}{}
+
+\ifboolexpr{ togl {graphics} }{}{
+ \begin{resumeItem}
+ \experienceHead{Machine Learning Research Intern}{University of Alberta}{Jul 2021 - Aug 2021}{Remote}
+ \begin{resumeList}
+     \item Trained and employed Natural Language Processing (NLP) models to help determine the cause of a change in depressive language in Tweets as part of a psychology study.
+ \ifboolexpr{ togl {general} }{
+     \item Created an evaluation framework to analyze mouse position data and automated it in Bash to reduce time spent by $20\times$.
+ }{
+     \item Created an evaluation framework with graphs and videos to analyse subject mouse position data during exams.
+     \item Developed automation pipeline in Bash to reduce time spent by $20\times$ on the application of the evaluation framework.
+ }
+ \end{resumeList}
+ \end{resumeItem}
+}
